--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -143,25 +143,25 @@ index:
   number_of_replicas: 0  # not for production
 
   analysis:
+    char_filter:
+      ru:
+        type: mapping
+        mappings: ["Ё"=>"Е", "ё"=>"е"]
     analyzer:
-      index_analyzer_ru:
-        type: custom
-        tokenizer: nGram
-        filter: [custom_word_delimiter, lowercase, russian_morphology, english_morphology, stopwords_ru, stop]
-      search_analyzer_ru:
+      index_ru:
         type: custom
         tokenizer: standard
         filter: [custom_word_delimiter, lowercase, russian_morphology, english_morphology, stopwords_ru, stop]
-    tokenizer:
-      nGram:
-        type: nGram
-        min_gram: 3
-        max_gram: 20
+        char_filter: [ru]
+      search_ru:
+        type: custom
+        tokenizer: standard
+        filter: [custom_word_delimiter, lowercase, russian_morphology, english_morphology, stopwords_ru, stop]
+        char_filter: [ru]
     filter:
       stopwords_ru:
         type: stop
-        #stopwords: [а,без,более,бы,был,была,были,было,быть,в,вам,вас,весь,во,вот,все,всего,всех,вы,где,да,даже,для,до,его,ее,если,есть,еще,же,за,здесь,и,из,или,им,их,к,как,ко,когда,кто,ли,либо,мне,может,мы,на,надо,наш,не,него,нее,нет,ни,них,но,ну,о,об,однако,он,она,они,оно,от,очень,по,под,при,с,со,так,также,такой,там,те,тем,то,того,тоже,той,только,том,ты,у,уже,хотя,чего,чей,чем,что,чтобы,чье,чья,эта,эти,это,я]
-        stopwords: [_ru_]
+        stopwords: [а,без,более,бы,был,была,были,было,быть,в,вам,вас,весь,во,вот,все,всего,всех,вы,где,да,даже,для,до,его,ее,если,есть,еще,же,за,здесь,и,из,или,им,их,к,как,ко,когда,кто,ли,либо,мне,может,мы,на,надо,наш,не,него,нее,нет,ни,них,но,ну,о,об,однако,он,она,они,оно,от,очень,по,под,при,с,со,так,также,такой,там,те,тем,то,того,тоже,той,только,том,ты,у,уже,хотя,чего,чей,чем,что,чтобы,чье,чья,эта,эти,это,я]
         ignore_case: true
       custom_word_delimiter:
         type: word_delimiter
